--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <li class="slide">
                     <img src="images/slide.jpg" alt="">
                     <div class="content">
-                        <h3>Our Clients Are Our First Priority</h3>
                         <h2>WELCOME MY PORTFOLIO</h2>
                     </div>
                 </li>                
@@ -44,7 +43,7 @@
                 <!-- <button data-filter="video">video</button> -->
             </div>
             
-            <ul class="design">
+            <ul class="gallery">
                 <!-- 이부분을 추가하기만 하면 됨 -->
                 <li class="poster">
                     <figure>
@@ -53,7 +52,6 @@
                             <h3>poster</h3>
                             <p><a href="#">web</a><span>/</span> <a href="">blue</a></p>
                         </figcaption>
-
                     </figure>
                 </li>
                 <li class="design">
@@ -69,7 +67,7 @@
                     <figure>
                         <img src="images/recentworks03.jpg" data-lightbox="images/recentworks03.jpg" alt="jinathan doe">
                         <figcaption>
-                            <h3><design</h3>
+                            <h3>design</h3>
                             <p><a href="#">print</a><span>/</span> <a href="">reflet</a></p>
                         </figcaption>
                     </figure>
