--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                         </figcaption>
                     </figure>
                 </li>
-                <li class="sns">
+                <li class="cardnews">
                     <figure>
-                        <img src="images/recentworks08.jpg" data-lightbox="images/recentworks08.jpg" alt="sns">
+                        <img src="images/recentworks08.jpg" data-lightbox="images/recentworks08.jpg" alt="cardnews">
                         <figcaption>
-                            <h3>sns</h3>
+                            <h3>cardnews</h3>
                             <p><a href="#">video</a><span>/</span> <a href="">responsive</a></p>
                         </figcaption>
                     </figure>
