--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button data-filter="youtube">유튜브썸네일</button><span>/</span>
                 <button data-filter="cardnews">카드뉴스</button><span>/</span>
                 <button data-filter="poster">포스터</button><span>/</span>
-                <button data-filter="banner">배너</button><span>/</span>1
+                <button data-filter="banner">배너</button><span>/</span>
                 <button data-filter="design">표지디자인</button><span>/</span>
                 <button data-filter="sns">SNS스토리</button><span>/</span>
                 <!-- <button data-filter="video">video</button> -->
