--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                         </figcaption>
                     </figure>
                 </li>
-                <li class="youtube">
+                <li class="design">
                     <figure>
-                        <img src="images/recentworks06.jpg" data-lightbox="images/recentworks06.jpg" alt="pamphlet">
+                        <img src="images/recentworks06.jpg" data-lightbox="images/recentworks06.jpg" alt="design">
                         <figcaption>
-                            <h3>youtube</h3>
+                            <h3>design</h3>
                             <p><a href="#">video</a><span>/</span> <a href="">responsive</a></p>
                         </figcaption>
                     </figure>
